--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -6,3 +6,9 @@
     background: #001529;
   }
 
+#col-Headder-center{
+    justify-content: center;
+    display: flex;
+    align-items: center;
+}
+
