--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,17 @@
   background: #001529;
   font-family: 'Kanit', sans-serif;
 }
+
+.ant-layout {
+  /* display: -ms-flexbox; */
+  display: flex;
+  /* -ms-flex: auto; */
+  flex: auto;
+  /* -ms-flex-direction: column; */
+  flex-direction: column;
+  min-height: 0;
+  background: #f0f2f5;
+  font-family: 'Kanit', sans-serif;
+  position: relative;
+  min-height: 100vh;
+}
