--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -1,5 +1,5 @@
 #header-frist {
-    height: 64px;
+    height: auto;
     padding: 0 13%;
     color: rgba(255, 255, 255, 0.85);
     line-height: 64px;
@@ -11,4 +11,28 @@
     display: flex;
     align-items: center;
 }
+
+#header-frist2 {
+    height: auto;
+    padding: 0 13%;
+    color: rgba(110, 109, 109, 0.85);
+    line-height: initial;
+    background: #ffffff;
+    font-size: x-large;
+    
+  }
+
+#nav-Header{
+    color: rgba(110, 109, 109, 0.85);
+    /* font-weight: bold; */
+    padding-left: 5%;
+    padding-right: 5%;
+    font-size: x-large;
+    /* padding-top: 0.8%; */
+}
+
+/* .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
+    color: rgba(110, 109, 109, 0.85);
+    border-bottom: 0px solid;
+} */
 
