--- a/src/css/Login.css
+++ b/src/css/Login.css
@@ -25,17 +25,32 @@
     margin-left: 15%;
     margin-right: 15%;
     margin-bottom: 3%;
-    padding-top: 5%;
+    padding-top: 4%;
     padding-bottom: 2.5%;
     background-color: #ffffff;
     border-radius: 5mm;
     box-shadow: 0 10px 10px rgba(0,0,0,.2);
 }
 
+#Input{
+    box-shadow: 1px 1px 0.5px 0.5px rgba(153, 151, 151, 0.2);
+    background-color: #fbfbfb;
+    border-radius: 1mm;
+    /* background-color: rgb(246, 249, 250); */
+    
+}
+
+.ant-input-affix-wrapper {
+    box-shadow: 1px 1px 0.5px 0.5px rgba(153, 151, 151, 0.2);
+    background-color: #fbfbfb;
+    border-radius: 1mm;
+}
+
 #Button-submit{
     display: flex;
     justify-content: center;
     background-color: #fc1702;
-    width: 30%;
+    width: fit-content;
     border: 0mm;
+    border-radius: 1mm;
 }
