--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -6,24 +6,9 @@
     justify-content: center;
 }
 
-#Row{
-    display: flex;
-    justify-content: center;
-}
-
-#List{
-    margin-bottom: 0%
-}
-
-#request-mask{
-    padding-left: 5%;
-    color: #ff3b18;
-    font-size:medium;
-}
-
-#Login{
-    margin-left: 15%;
-    margin-right: 15%;
+#Profile{
+    margin-left: 10%;
+    margin-right: 10%;
     margin-bottom: 3%;
     padding-top: 4%;
     padding-bottom: 4%;
@@ -32,18 +17,21 @@
     box-shadow: 0 10px 10px rgba(0,0,0,.2);
 }
 
+#List{
+    margin-bottom: 0%
+}
+
 #Input{
     box-shadow: 1px 1px 0.5px 0.5px rgba(153, 151, 151, 0.2);
     background-color: #fbfbfb;
     border-radius: 1mm;
     /* background-color: rgb(246, 249, 250); */
-    
 }
 
-.ant-input-affix-wrapper {
-    box-shadow: 1px 1px 0.5px 0.5px rgba(153, 151, 151, 0.2);
-    background-color: #fbfbfb;
-    border-radius: 1mm;
+#request-mask{
+    padding-left: 5%;
+    color: #ff3b18;
+    font-size:medium;
 }
 
 #Button-submit{
@@ -55,7 +43,15 @@
     border-radius: 1mm;
 }
 
-.ant-form-item-has-error .ant-input, .ant-form-item-has-error .ant-input-affix-wrapper, .ant-form-item-has-error .ant-input:hover, .ant-form-item-has-error .ant-input-affix-wrapper:hover {
-    background-color: #fbfbfb;
-    border-color: #ff4d4f !important;
+/* #label-img{
+    border: 1mm #ff3b18;
+    background-color: antiquewhite;
+} */
+
+.ant-upload-picture-card-wrapper{
+    display: flex;
+    justify-content: center;
+    padding-bottom: 5%;
 }
+
+
