--- a/src/css/Register.css
+++ b/src/css/Register.css
@@ -5,6 +5,7 @@
     display: flex;
     justify-content: center;
 }
+
 #Row-outside{
     padding-left: 10%;
 }
@@ -19,7 +20,7 @@
     margin-right: 10%;
     margin-bottom: 3%;
     padding-top: 4%;
-    padding-bottom: 2.5%;
+    padding-bottom: 4%;
     background-color: #ffffff;
     border-radius: 5mm;
     box-shadow: 0 10px 10px rgba(0,0,0,.2);
@@ -64,7 +65,6 @@ img {
     background-color: #fbfbfb;
     border-radius: 1mm;
     /* background-color: rgb(246, 249, 250); */
-    
 }
 
 #Password{
@@ -81,7 +81,7 @@ img {
     display: flex;
     justify-content: center;
     background-color: #fc1702;
-    width: 20%;
+    width: fit-content;
     border: 0mm;
     border-radius: 1mm;
 }
@@ -92,7 +92,7 @@ img {
 }
 
 .ant-form-item-has-error .ant-input, .ant-form-item-has-error .ant-input-affix-wrapper, .ant-form-item-has-error .ant-input:hover, .ant-form-item-has-error .ant-input-affix-wrapper:hover {
-    background-color: rgb(245, 240, 240);
+    background-color: #fbfbfb;
     border-color: #ff4d4f !important;
 }
 
