--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -39,35 +39,35 @@
 }
 
 #black-img1{
-  background-color: brown;
+  background-color: #DA213D;
   height: 250px;
   border-right: 4px solid white;
   border-left: 4px solid white;
 }
 
 #black-img2{
-  background-color: brown;
+  background-color: #DA213D;
   height: 250px;
   border-right: 4px solid white;
   border-left: 4px solid white;
 }
 
 #black-img3{
-  background-color: brown;
+  background-color: #DA213D;
   height: 250px;
   border-right: 4px solid white;
   border-left: 4px solid white;
 }
 
 #black-img4{
-  background-color: brown;
+  background-color: #DA213D;
   height: 250px;
   border-right: 4px solid white;
   border-left: 4px solid white;
 }
 
 #black-img5{
-  background-color: brown;
+  background-color: #DA213D;
   height: 250px;
   border-right: 4px solid white;
   border-left: 4px solid white;
