--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -33,7 +33,7 @@
     height: auto;
     padding: 0 10%;
     color: rgba(110, 109, 109, 0.85);
-    line-height: initial;
+    line-height: 45px;
     background: #ffffff;
     
   }
@@ -51,6 +51,12 @@
   color: rgba(110, 109, 109, 0.85);
 }
 
+#sub-icon-profile{
+  color: rgba(110, 109, 109, 0.85);
+  margin-left: 2%;
+  margin-right: 2%;
+}
+
 @media screen and (min-width: 601px) {
   #header-frist2 {
     font-size: 22px;
@@ -60,6 +66,9 @@
   }
   .ant-layout-header .ant-menu {
     font-size: 22px;
+  }
+  #sub-icon-profile{
+    font-size: 18px;
   }
 }
   
@@ -71,6 +80,9 @@
     font-size: 16px;
   }
   .ant-layout-header .ant-menu {
+    font-size: 16px;
+  }
+  #sub-icon-profile{
     font-size: 16px;
   }
 }
@@ -85,6 +97,9 @@
   .ant-layout-header .ant-menu {
     font-size: 12px;
   }
+  #sub-icon-profile{
+    font-size: 12px;
+  }
 }
 
 .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item:hover, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu:hover, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-active, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-active, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-open, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-open, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-item-selected, .ant-menu-horizontal:not(.ant-menu-dark) > .ant-menu-submenu-selected {
@@ -93,9 +108,9 @@
 }
 
 .ant-menu-submenu-selected {
-  color: rgba(247, 65, 65, 0.85);
+  color: #DA213D;
 }
 
 .ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not( .ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
-  color:#ff1818;
+  color:#DA213D;
 }
