--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -114,3 +114,11 @@
 .ant-menu-item:hover, .ant-menu-item-active, .ant-menu:not( .ant-menu-inline) .ant-menu-submenu-open, .ant-menu-submenu-active, .ant-menu-submenu-title:hover {
   color:#DA213D;
 }
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
