--- a/src/App.css
+++ b/src/App.css
@@ -68,3 +68,11 @@
   position: relative;
   min-height: 100vh;
 }
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
+}
