--- a/src/css/Profile.css
+++ b/src/css/Profile.css
@@ -51,7 +51,56 @@
 .ant-upload-picture-card-wrapper{
     display: flex;
     justify-content: center;
-    padding-bottom: 5%;
+    /* padding-bottom: 5%; */
 }
 
+#edit-button{
+    display: flex;
+    justify-content: center;
+    color: #006592;
+    cursor: pointer;
+}
 
+#displaycenter {
+    width: 100%;
+    display: flex;
+}
+
+#displaycenterspen {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#imgprofile{
+    background-color: aliceblue;
+    border-radius: 50%;
+    width: 100%;
+    height: 102px;
+  }
+
+#divimgprofile{
+    width: 102px;
+    height: 102px;
+    background-color: aliceblue;
+    border-radius: 50%;
+}
+
+#cancelButtom{
+    color: #fc1702;
+}
+
+.ant-upload-list-picture-card .ant-upload-list-item {
+    height: 100%;
+    margin: 0;
+    display: none;
+}
+
+.ant-upload-list-picture-card-container {
+    display: inline-block;
+    width: 0px;
+    height: 0px;
+    margin: 0 0px 0px 0;
+    vertical-align: top;
+}
