--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -75,6 +75,10 @@
   margin: 0 0px;
 }
 
+.ant-menu-item-selected a, .ant-menu-item-selected a:hover {
+  color: #DA213D;
+}
+
 @media screen and (min-width: 601px) {
   #header-frist2 {
     font-size: 22px;
