--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -1,12 +1,19 @@
 #footer-frist {
     height: auto;
     color: rgba(255, 255, 255, 0.85);
-    position: inherit;
+    position: initial;
     left:0;
     bottom:0;
     right:0;
     background: #001529;
     padding:2%;
+  }
+
+  #footer-div {
+    display: block;
+    padding: 20px;
+    height: fit-content;
+    width: 100%
   }
 
 .ant-layout-footer {
