--- a/src/css/Footer.css
+++ b/src/css/Footer.css
@@ -34,3 +34,21 @@
     padding-left: 1%;
     padding-right: 1%;
 }
+
+#img-facebook{
+  /* width: 50px;
+  height: 50px; */
+  cursor: pointer;
+}
+
+#row-img-facebook {
+  padding-left: 1%;
+  padding-right: 1%;
+}
+
+#test-facebook {
+  display: flex;
+  align-items: center;
+  margin-left: 1%;
+  font-size: large;
+}
