--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -30,6 +30,23 @@
     margin-bottom: 0%
 }
 
+#select{
+    margin-bottom: 5%;
+}
+
+
+.ant-select {
+    border-radius: 1mm;
+    box-shadow: 1px 1px 0.5px 0.5px rgba(153, 151, 151, 0.2);
+    background-color: #fbfbfb;
+    width: 100%;
+}
+
+.ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector {
+    cursor: text;
+    border-radius: 1mm;
+}
+
 #request-mask{
     padding-left: 5%;
     color: #ff3b18;
