--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -38,6 +38,11 @@
     
   }
 
+#header-frist-mobile{
+  display: flex;
+  justify-content: center;
+}
+
   #nav-Header{
     color: rgba(110, 109, 109, 0.85);
     /* font-weight: bold; */
@@ -81,6 +86,18 @@
 
 .ant-menu-item-selected a, .ant-menu-item-selected a:hover {
   color: #DA213D;
+}
+
+#icon-search {
+  font-size: 160%;
+  /* background-color: #DA213D; */
+  margin: 1.5%;
+  border-radius: 10%;
+  padding: 1%;
+  position: absolute;
+  right: 0;
+  z-index: 200;
+  color: aliceblue;
 }
 
 @media screen and (min-width: 601px) {
