Member Point and Form Register

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -3,7 +3,7 @@
 }
 
 #col-img-head1{
-  background-color: darkgoldenrod;
+  /* background-color: darkgoldenrod; */
   height: 400px;
   margin-top: 2%;
   border-right: 8px solid white;
