--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -1,27 +1,30 @@
 #home {
-  padding: 0 10%;
+  padding: 0% 0% 0% 0%;
 }
 
 #col-img-head1{
   /* background-color: darkgoldenrod; */
-  height: 400px;
-  margin-top: 2%;
-  border-right: 8px solid white;
+  height: fit-content;
+  /* height: auto; */
+  /* margin-top: 2%; */
+  
 }
 
 #col-img-head2{
-  margin-top: 2%;
+  /* margin-top: 2%; */
+  height: fit-content;
+  /* margin-left: 1%; */
 }
 
 #row-col-img-head2{
   background-color: darkgoldenrod;
-  height: 200px;
-  border-bottom: 8px solid white;
+  /* height: 200px; */
+  /* border-bottom: 8px solid white; */
 }
 
 #row-col-img-head3{
   background-color: darkgoldenrod;
-  height: 200px;
+  /* height: 200px; */
 }
 
 #hade-standate{
@@ -38,43 +41,9 @@
   padding: 0 2%;
 }
 
-#black-img1{
-  background-color: #DA213D;
-  height: 250px;
-  border-right: 4px solid white;
-  border-left: 4px solid white;
-}
-
-#black-img2{
-  background-color: #DA213D;
-  height: 250px;
-  border-right: 4px solid white;
-  border-left: 4px solid white;
-}
-
-#black-img3{
-  background-color: #DA213D;
-  height: 250px;
-  border-right: 4px solid white;
-  border-left: 4px solid white;
-}
-
-#black-img4{
-  background-color: #DA213D;
-  height: 250px;
-  border-right: 4px solid white;
-  border-left: 4px solid white;
-}
-
-#black-img5{
-  background-color: #DA213D;
-  height: 250px;
-  border-right: 4px solid white;
-  border-left: 4px solid white;
-}
-
 #row-pay{
   padding: 0 10%;
+  margin-bottom: 3%;
 }
 
 #head-card{
