--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -24,6 +24,7 @@
     font-size: small;
     color: #DA213D;
     font-weight: 600;
+    margin-top: 4%;
 }
 
 #col-sidbar3 {
@@ -41,6 +42,16 @@
     /* padding-left: 4%;
     padding-right: 4%; */
     padding-top: 3%;
+    /* padding-bottom: 2%; */
+    font-size: small;
+    color: #DA213D;
+    font-weight: 600;
+}
+
+#div-sidebar7 {
+    /* padding-left: 4%;
+    padding-right: 4%; */
+    padding-top: 1%;
     /* padding-bottom: 2%; */
     font-size: small;
     color: #DA213D;
