--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -15,7 +15,7 @@
 }
 
 #cover-product{
-    margin: 0% 0% 1% 0%;
+    margin: 1% 10% 1% 10%;
 }
 
 #img-product {
@@ -65,6 +65,11 @@
     margin-right: 10%;
 }
 
+#Row-Product-img{
+    margin-left: 14%;
+    margin-right: 14%;
+}
+
 #Row-Product-Search{
     font-size: 150%;
     margin-top: 1%;
@@ -103,6 +108,11 @@
     width: 100%;
     height: 100%;
     margin-right: 5%;
+    /* width: auto; */
+    /* height: 100%;
+    margin-right: 5%;
+    max-height: 241.05px;
+    min-height: 241.05px; */
 }
 
 #text-detail{
@@ -175,6 +185,11 @@
     padding-right: 3%;
 }
 
+/* #row-img {
+    margin-left: 4%;
+    margin-right: 4%;
+} */
+
 #product-tab-headerbar-end {
     display: flex;
     justify-content: flex-end;
@@ -193,6 +208,9 @@
     justify-content: flex-end;
     margin-left: 10%;
     margin-right: 10%;
+    margin-top: 1%;
+    margin-bottom: 2%;
+    z-index: 200;
 }
 
 a {
@@ -323,6 +341,10 @@ a {
     }
 
     #product-footer-page {
+        margin-bottom: 15%;
+    }
+
+    #product-footer-page-search {
         margin-bottom: 15%;
     }
 }
