--- a/src/css/Product.css
+++ b/src/css/Product.css
@@ -104,6 +104,12 @@
     border-right: 0.3em solid #fbfbfb; */
 }
 
+#img-productCardList{
+    width: 100%;
+    /* height: 100%; */
+    margin-right: 5%;
+}
+
 #img-product{
     width: 100%;
     height: 100%;
@@ -124,6 +130,7 @@
 }
 
 #textdescription{
+    margin-top: 1%;
     margin-bottom: 1%;
 }
 
