--- a/src/css/Contact.css
+++ b/src/css/Contact.css
@@ -1,12 +1,14 @@
 
 #contact{
     padding: 0 10%;
-    margin-top: 5%;
+    margin-top: 2%;
     margin-bottom: 6%;
 }
 #map{
-    background-color: darkgoldenrod;
-    height: 400px;
+    /* background-color: darkgoldenrod; */
+    height: fit-content;
+    width: fit-content;
+    padding-top: 1.5%;
     margin-top: 2%;
   }
 
