--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -2,7 +2,7 @@
     height: auto;
     padding: 0 10%;
     color: rgba(255, 255, 255, 0.85);
-    line-height: 64px;
+    line-height: 55px;
     background: #001529;
   }
 
@@ -25,7 +25,7 @@
 
 #col-Headder-center3{
   justify-content: flex-end;
-  display: flex;
+  /* display: flex; */
   align-items: center;
 }
 
@@ -33,7 +33,7 @@
     height: auto;
     padding: 0 10%;
     color: rgba(110, 109, 109, 0.85);
-    line-height: 45px;
+    line-height: 30px;
     background: #ffffff;
     
   }
@@ -65,8 +65,8 @@
 #img-profile{
   background-color: aliceblue;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
 }
 
