--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -13,7 +13,8 @@
     padding-left: 4%;
     padding-top: 2%;
     /* padding-bottom: 2%; */
-    font-size: x-large;
+    font-size: medium;
+
 }
 
 #div-sidebar3 {
@@ -78,10 +79,11 @@
     padding-right: 4%;
     margin-top: 1%;
     /* padding-bottom: 2%; */
-    background-color: #f3f2f2;
+    /* background-color: #f3f2f2; */
     font-size: large;
     color: black;
     font-weight: 600;
+    font-size: medium;
 }
 
 #div-sidebar6 {
