--- a/src/css/Sidebar.css
+++ b/src/css/Sidebar.css
@@ -12,7 +12,7 @@
 #div-sidebar2 {
     padding-left: 4%;
     padding-top: 2%;
-    /* padding-bottom: 2%; */
+    padding-bottom: 2%;
     font-size: medium;
 
 }
@@ -25,7 +25,7 @@
     font-size: small;
     color: #DA213D;
     font-weight: 600;
-    margin-top: 4%;
+    /* margin-top: 4%; */
 }
 
 #col-sidbar3 {
@@ -98,9 +98,12 @@
 
 .ant-collapse > .ant-collapse-item.ant-collapse-no-arrow > .ant-collapse-header {
     padding-left: 6%;
+    padding-bottom: 0.5%;
+    padding-top: 1%;
 }
 
 #sub-cat {
+    background-color: #ffffff;
     color: black;
     font-size: smaller;
     font-weight: 500;
