--- a/src/css/FormRegister.css
+++ b/src/css/FormRegister.css
@@ -1,6 +1,6 @@
 #Header-FR{
     font-size: x-large;
-    padding-top: 1.5%;
+    margin-top: 3%;
     padding-bottom: 1.5%;
     display: flex;
     justify-content: center;
