--- a/src/css/Header.css
+++ b/src/css/Header.css
@@ -20,7 +20,7 @@
 #col-Headder-center4{
   display: flex;
   align-items: center;
-  padding-left: 4%;
+  padding-left: 2%;
 }
 
 #col-Headder-center3{
@@ -31,7 +31,7 @@
 
 #header-frist2 {
     height: auto;
-    padding: 0 10%;
+    padding: 0 3%;
     color: rgba(110, 109, 109, 0.85);
     line-height: 30px;
     background: #ffffff;
@@ -142,6 +142,8 @@
   }
   #nav-Header{
     font-size: 12px;
+    padding-left: 3%;
+    padding-right: 3%;
   }
   .ant-layout-header .ant-menu {
     font-size: 12px;
